compiler/tests/ar/errors/pure_print.salam
// لغة: العربية
// EXPECT: E012
نقي دالة صارخ(x : صحيح) : صحيح:
    اطبع(x)
    أرجع x
نهاية

دالة الرئيسية:
    اطبع(صارخ(2))
نهاية
